@@ -1,5 +1,6 @@
 Version 0.2.0:
 ------------
++ For each mongodump, a random UUID is appended to the output directory in order to avoid name collisions
 + Option: Dry run mode -> doesn't do a thing (--dry-run or -d)
 + Option: Log to stdout (-s or --stdout)
 + Option: set log level (--ll or --log-level)
